<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/main_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/geocode_title"
        android:textSize="@dimen/main_title_size" />

    <TextView
        android:id="@+id/is_need_geocode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_title"
        android:textSize="@dimen/second_title_size"
        android:text="@string/is_need_geocode" />

    <TextView
        android:id="@+id/is_need_geocode_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/is_need_geocode"
        android:text="@string/is_need_geocode_desc" />

    <RadioGroup
        android:id="@+id/is_need_geocode_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/is_need_geocode_desc"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/use_geocode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_geocode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_geocode_desc"
            android:textSize="@dimen/desc_title_size" />

        <RadioButton
            android:id="@+id/no_use_geocode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_use_geocode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_use_geocode_desc"
            android:textSize="@dimen/desc_title_size" />
    </RadioGroup>

    <Button
        android:id="@+id/test_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/setting_ok" />

</RelativeLayout>