<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/main_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/other_title"
        android:textSize="@dimen/main_title_size" />

    <TextView
        android:id="@+id/location_coord_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_title"
        android:textSize="@dimen/second_title_size" 
        android:text="@string/location_coord_type" />

    <TextView
        android:id="@+id/location_coord_type_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_coord_type"
        android:textSize="@dimen/desc_title_size" 
        android:text="@string/location_coord_type_desc" />

    <RadioGroup
        android:id="@+id/location_coord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_coord_type_desc"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/location_coord_type_gcj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_coord_type_gcj" />

        <RadioButton
            android:id="@+id/location_coord_type_bd09ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_coord_type_bd09ll" />

        <RadioButton
            android:id="@+id/location_coord_type_bd09"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_coord_type_bd09" />
    </RadioGroup>

    <TextView
        android:id="@+id/is_need_direction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_coord"
        android:textSize="@dimen/second_title_size"
        android:text="@string/is_need_direction" />

    <TextView
        android:id="@+id/is_need_direction_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/is_need_direction"
        android:textSize="@dimen/desc_title_size"
        android:text="@string/is_need_direction_desc" />

    <RadioGroup
        android:id="@+id/is_need_direction_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/is_need_direction_desc"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/is_need_direction_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_need_direction_yes" />

        <RadioButton
            android:id="@+id/is_need_direction_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_need_direction_no" />
    </RadioGroup>
    
   <!--  <TextView
        android:id="@+id/is_need_operation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/is_need_direction_group"
        android:textSize="@dimen/second_title_size"
        android:text="@string/is_need_operation" />

    <TextView
        android:id="@+id/is_need_operation_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/is_need_operation"
        android:textSize="@dimen/desc_title_size"
        android:text="@string/is_need_operation_desc" /> -->

   <!--  <RadioGroup
        android:id="@+id/is_need_operation_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/is_need_operation_desc"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/is_need_operation_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_need_operation_yes" />

        <RadioButton
            android:id="@+id/is_need_operation_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_need_operation_no" />
    </RadioGroup> -->

    <Button
        android:id="@+id/test_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/setting_ok" />

</RelativeLayout>